# cntk-api-experiment

./: .gitignore  CMakeLists.txt  README.md
include/chianti/: chianti.h  exception.h  layers.h  nonlinearities.h  util.h  values.h
src/: main.cpp
test/: layers.cpp  values.cpp
